gb jones fix, wraps

--- a/standards/style.css
+++ b/standards/style.css
@@ -19,8 +19,9 @@
   
 #scrollContainer{
     padding: 22px;
-    overflow-x: hidden;
-max-width: 100vw;
+    overflow-wrap: break-word;
+    hyphens: auto;
+    max-width: 100vw;
     font-family: "Standards";
     font-size: 22px;
     align-items: center;
@@ -66,6 +67,8 @@ a{
  
   .flex-block {
     width: 20vw;
+    overflow-wrap: break-word;
+    hyphens:none;
     text-wrap: wrap;
     text-align: left;
   }
